exports[`Storyshots Button API 1`] = `
<button
  className="hkjKTu"
  kind="primary">
  Simple button
</button>
`;

exports[`Storyshots Button Overriding style 1`] = `
<button
  className="WzsJi"
  kind="primary"
  onClick={[Function]}>
  Overriding style
</button>
`;

exports[`Storyshots Button With kind props 1`] = `
<div
  className="ekbxOp">
  <button
    className="gWKTnI"
    kind="default"
    onClick={[Function]}>
    default
  </button>
  <button
    className="hkjKTu"
    kind="primary"
    onClick={[Function]}>
    primary
  </button>
  <button
    className="kCvXCW"
    kind="success"
    onClick={[Function]}>
    success
  </button>
  <button
    className="hHCdSJ"
    kind="error"
    onClick={[Function]}>
    error
  </button>
  <button
    className="ePRgCQ"
    kind="warning"
    onClick={[Function]}>
    warning
  </button>
</div>
`;

exports[`Storyshots Button With theme provider (Material) 1`] = `
<div
  className="ekbxOp">
  <button
    className="fLAIJr"
    kind="default"
    onClick={[Function]}>
    default
  </button>
  <button
    className="jBPAeu"
    kind="primary"
    onClick={[Function]}>
    primary
  </button>
  <button
    className="ddoWjI"
    kind="success"
    onClick={[Function]}>
    success
  </button>
  <button
    className="gGdFcO"
    kind="error"
    onClick={[Function]}>
    error
  </button>
  <button
    className="hYHCGC"
    kind="warning"
    onClick={[Function]}>
    warning
  </button>
</div>
`;

exports[`Storyshots Card API 1`] = `
<div
  className="dVFvPA">
  Card Content
</div>
`;

exports[`Storyshots DataChannelCard API 1`] = `
<div
  className="jFlOlG">
  Content
</div>
`;

exports[`Storyshots Heading API 1`] = `
<h1
  className="hbhShN"
  color="black">
  Level 1
</h1>
`;

exports[`Storyshots Heading With color props 1`] = `
<div>
  <h2
    className="kpVSEK"
    color="black">
    Level 2 
    black
  </h2>
  <h2
    className="kmbAxM"
    color="grayBase">
    Level 2 
    grayBase
  </h2>
  <h2
    className="eKgIrP"
    color="grayDark">
    Level 2 
    grayDark
  </h2>
  <h2
    className="ewuSco"
    color="grayLight">
    Level 2 
    grayLight
  </h2>
  <h2
    className="bXeicf"
    color="white">
    Level 2 
    white
  </h2>
  <h2
    className="ewuSco"
    color="default">
    Level 2 
    default
  </h2>
  <h2
    className="bJkAQM"
    color="primary">
    Level 2 
    primary
  </h2>
  <h2
    className="jEPjBg"
    color="success">
    Level 2 
    success
  </h2>
  <h2
    className="edheTq"
    color="error">
    Level 2 
    error
  </h2>
  <h2
    className="iJMMrA"
    color="warning">
    Level 2 
    warning
  </h2>
</div>
`;

exports[`Storyshots Heading With level props 1`] = `
<div>
  <h1
    className="hbhShN"
    color="black">
    Level 1
  </h1>
  <h2
    className="kpVSEK"
    color="black">
    Level 2
  </h2>
  <h3
    className="fJtQWf"
    color="black">
    Level 3
  </h3>
  <h4
    className="cDDiS"
    color="black">
    Level 4
  </h4>
</div>
`;

exports[`Storyshots Switch API 1`] = `
<div>
  <div
    checked={false}
    className="cICTqL" />
  <div
    checked={true}
    className="jvOKcu" />
</div>
`;

exports[`Storyshots Switch Overriding style 1`] = `
<div
  checked={false}
  className="hZJZFY"
  onClick={[Function]} />
`;

exports[`Storyshots Switch Stateful switch 1`] = `
<div
  checked={false}
  className="cICTqL"
  onClick={[Function]} />
`;
